style: fix sponsor button contrast for accessibility

--- a/web/src/components/HeaderMenu.scss
+++ b/web/src/components/HeaderMenu.scss
@@ -15,13 +15,13 @@
   font-weight: 500;
   text-decoration: none;
   background-color: #fff0f3;
-  color: #da3751;
+  color: #ca263f;
   transition:
     background-color 0.2s ease,
     transform 0.1s ease;
 
   .icon-heart {
-    color: #da3751;
+    color: #ca263f;
   }
 
   &:hover {
